# lerobot-coreai

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
conformance/app/: README.md  action-queue-cases.json  policy-manifest.json  skill-plan.json
docs/: action-contract-v2.md  apple-runtime-certification.md  artifact-index.md  bridge-benchmark-packs.md  compare-report.md  compare-v2.md  compare.md  conformance-levels-l0-l6.md  dataset-metadata-certification.md  dry-run.md  eval-report.md  eval.md  export-report.md  export.md  external-http-controller-contract.md  feature-contract.md  fixture-format.md  guarded-real-mode.md  lerobot-compatibility-ci.md  lerobot-compatibility-levels.md  lerobot-compatibility.md  lerobot-eval-v2.md  lerobot-eval-v3.md  lerobot-local-registry.md  lerobot-native-bridge.md  live-metrics.md  manifest-contracts-v1.md  no-actuation-contract.md  observation-adapters.md  observation-pipeline-bridge.md  observation-sources.md  official-lerobot-plugin.md  operator-approval.md  policy-card-generator.md  processor-parity.md  profile-calibration.md  profile-recommendation.md  publish-folder.md  real-adapters.md  real-mode-safety.md  (+20 more)
docs/rfcs/: README.md  RFC-0000-ECOSYSTEM-ARCHITECTURE.md  RFC-0100-COREAI-INTEROP.md  RFC-0400-COREAI-RUNNER.md  RFC-0700-LEROBOT-COREAI.md  RFC-0800-CROSS-REPO-DELIVERY-PLAN.md  RFC-0900-LEROBOT-COREAI-APPLE-APP.md
docs/tutorials/: coreai-policy-bridge.md  lerobot-dataset-eval.md  train-with-lerobot-run-with-coreai.md
examples/: evo1_so100_observation.json
examples/lerobot_bridge/: bridge_check.py  dataset_eval_bridge.py  select_action_bridge.py
examples/real_guarded_mock/: golden_path.md
schemas/: lerobot-coreai.schema.json
src/lerobot_coreai/: __init__.py  action_blocker.py  action_contract.py  action_queue.py  app_conformance.py  apple_runtime.py  artifact_index.py  artifact_index_reports.py  authority.py  batching.py  benchmark_pack.py  capabilities_normalize.py  catalog.py  certification_bundle.py  cli.py  compare.py  compare_v2.py  config.py  conformance_levels.py  coreai_observation_serialization.py  dataset.py  dataset_metadata_evidence.py  dataset_metadata_hash.py  dataset_metadata_validation.py  episode_staging.py  errors.py  eval.py  export.py  external_http_contract.py  fabric_adapter.py  failure_taxonomy.py  feature_contract.py  feature_contract_diff.py  feature_contract_reports.py  feature_contract_validation.py  fixtures.py  hf_metadata.py  lerobot_adapter.py  lerobot_bridge.py  lerobot_compat.py  (+77 more)
src/lerobot_coreai/compatibility/: __init__.py  versions.py
src/lerobot_coreai/profiles/: __init__.py  default-sim-safe.json  generic-7dof-sim-default.json  pusht-sim-default.json  so100-real-guarded.json  so100-sim-default.json  so101-sim-default.json
src/lerobot_coreai/schemas/: __init__.py  action-contract.schema.json  artifact-index-entry.schema.json  artifact-index.schema.json  batch-contract-v3.schema.json  bridge-benchmark-pack.schema.json  compare-report.schema.json  compare-v2-report.schema.json  eval-report.schema.json  export-report.schema.json  external-http-preflight.schema.json  external-http-safety-state.schema.json  feature-contract-v1.schema.json  hf-metadata.schema.json  lerobot-coreai.schema.json  (+31 more)
tests/: conftest.py  test_action_blocker.py  test_action_contract.py  test_action_queue.py  test_app_conformance.py  test_apple_runtime.py  test_approval_schemas.py  test_artifact_index.py  test_batching.py  test_benchmark_pack.py  test_builtin_profiles.py  test_camera_observation_source.py  test_capabilities_and_support.py  test_certification_bundle.py  test_cli.py  test_cli_approval.py  test_cli_artifact_index.py  test_cli_bridge_benchmark.py  test_cli_compare.py  test_cli_compare_v2.py  test_cli_eval.py  test_cli_eval_v3.py  test_cli_export.py  test_cli_hf_metadata.py  test_cli_lerobot_bridge.py  test_cli_lerobot_compat.py  test_cli_package_sim_run.py  test_cli_policy_card.py  test_cli_predict.py  test_cli_profile_toolkit.py  test_cli_real.py  test_cli_release_check.py  test_cli_rollout.py  test_cli_safety_gate.py  test_cli_safety_regression.py  test_cli_shadow.py  test_cli_shadow_camera.py  test_cli_shadow_live_metrics.py  test_cli_sign_verify.py  test_cli_sim.py  (+122 more)
tests/integration/: __init__.py  test_lerobot060_smoke.py
(+6 files in other folders)
