[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lerobot-coreai"
version = "1.3.27.3"
description = "Apple CoreAI runtime backend for LeRobot policies."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Kevin Saltarelli" },
]
keywords = ["lerobot", "coreai", "robotics", "apple", "aimodel", "vla"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.0",
    "packaging>=21",
]

[project.optional-dependencies]
lerobot = [
    # LeRobot 0.6.x requires Python 3.12+ and controls its own torch/numpy deps.
    # We do NOT declare torch directly — LeRobot 0.6.0 pins torch>=2.7,<2.12.0.
    "lerobot>=0.6.0,<0.7.0; python_version >= '3.12'",
]
fabric = [
    # Export orchestration wrapper around coreai-fabric.
    "coreai-fabric>=0.1.0",
]
camera = [
    # Optional camera observation source for shadow mode (v0.7.1).
    "opencv-python>=4.8",
]
sim = [
    # Optional gymnasium simulator adapter for sim mode (v0.8.1).
    "gymnasium>=0.29",
]
signing = [
    # Optional Ed25519 artifact signing / verification (v1.2.0).
    "cryptography>=41",
]
all = [
    "lerobot-coreai[lerobot,fabric,camera,sim,signing]",
]
test = [
    "pytest>=7",
    "pytest-cov>=4",
    # Signing is exercised in CI, so the crypto backend is a test dependency.
    "cryptography>=41",
]

[project.scripts]
lerobot-coreai = "lerobot_coreai.cli:main"
# Optional alias for CoreAI users (spec §5.4).
coreai-robot = "lerobot_coreai.cli:main"

[project.urls]
Homepage = "https://github.com/kevinqz/lerobot-coreai"
Repository = "https://github.com/kevinqz/lerobot-coreai"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_coreai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --strict-markers/--strict-config fail on an unknown marker or a config typo rather
# than passing silently (v1.3.26.14 CI-honesty hardening).
addopts = "-v --strict-markers --strict-config"
